# rangex

./: .coding-ci.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml
.github/workflows/: cmake-multi-platform.yml
examples/: rangex_demo.cpp
src/: main.compatible.cpp  main.cpp  test_framework.h
src/lib/: rangex_lib.cpp
src/lib/include/: cstdtype_helper.h  rangex_lib.h
